add poverty trap to lecture 7

--- a/eae0310-7-assistencia-social.html
+++ b/eae0310-7-assistencia-social.html
@@ -3,7 +3,8 @@
   <head>
     <title>EAE-0310: ECONOMIA DO SETOR PÚBLICO</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Pedro Forquesato http://www.pedroforquesato.com Sala 19C/FEA2 - pforquesato@usp.br" />
+    <meta name="author" content="Pedro Forquesato http://www.pedroforquesato.com Sala 217/FEA2 - pforquesato@usp.br" />
+    <script src="libs/header-attrs-2.13/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -12,7 +13,7 @@
 class: center, middle, inverse, title-slide
 
 # EAE-0310: ECONOMIA DO SETOR PÚBLICO
-### Pedro Forquesato<br/><a href="http://www.pedroforquesato.com" class="uri">http://www.pedroforquesato.com</a><br/>Sala 19C/FEA2 - <a href="mailto:pforquesato@usp.br" class="email">pforquesato@usp.br</a>
+### Pedro Forquesato<br/><a href="http://www.pedroforquesato.com" class="uri">http://www.pedroforquesato.com</a><br/>Sala 217/FEA2 - <a href="mailto:pforquesato@usp.br" class="email">pforquesato@usp.br</a>
 ### Faculdade de Economia, Administração e Contabilidade<br/>Universidade de São Paulo
 ### Aula 7: Assistência social<br/>2022/1
 
@@ -323,6 +324,15 @@ A necessidade de dinheiro imediato evita investimentos que aumentem a produtivid
 
 Pobres também têm **restrições de seguro**: isso faz com que sejam especialmente avessos ao risco e invistam menos que o ótimo
 
+
+---
+class: middle
+
+&lt;img src="figs/eae0310-7-15.png" width="50%" /&gt;&lt;img src="figs/eae0310-7-15b.png" width="50%" /&gt;
+
+[Bal+22] examinam um programa de transferência de riqueza para os "ultra-pobres" em Bangladesh. O grupo de controle (b) está em uma **armadilha de pobreza** &amp;mdash; mas transferências *acima de um valor* em (a) rompem essa armadilha, e geram riqueza em 2011 igual ou maior que em 2007
+
+
 ---
 class: middle
 ## Restrições sobre os pobres
@@ -448,6 +458,10 @@ Uma RBU paga com taxação proporcional é *economicamente equivalente* a uma tr
 class:middle
 # Referências
 &lt;small&gt;
+[Bal+22] C. Balboni, O. Bandiera, R. Burgess, et al. "Why do people
+stay poor?" In: _The Quarterly Journal of Economics_ 137.2 (2022), pp.
+785-844.
+
 [BHM00] R. P. d. Barros, R. Henriques, and R. Mendonça. "Desigualdade e
 pobreza no Brasil: retrato de uma estabilidade inaceitável". In:
 _Revista brasileira de ciências sociais_ 15 (2000), pp. 123-142.
@@ -464,15 +478,15 @@ Brazil". In: _Economics of Education Review_ 54 (2016), pp. 306-320.
 impact of the expansion of the Bolsa Família Program on the time
 allocation of youths and their parents". In: _Revista Brasileira de
 Economia_ 70.2 (2016), pp. 183-202.
-
-[GNS21] F. Gerard, J. Naritomi, and J. Silva. "Cash Transfers and
-Formal Labor Markets: Evidence from Brazil".  (2021).
 &lt;/small&gt;
 
 ---
 class:middle
 # Referências
 &lt;small&gt;
+[GNS21] F. Gerard, J. Naritomi, and J. Silva. "Cash Transfers and
+Formal Labor Markets: Evidence from Brazil".  (2021).
+
 [Gru16] J. Gruber. _Public finance and public policy_. 5th ed.
 Macmillan, 2016.
 
