--- a/eae0310-1-introducao.html
+++ b/eae0310-1-introducao.html
@@ -3,7 +3,8 @@
   <head>
     <title>EAE-0310: ECONOMIA DO SETOR PÚBLICO</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Pedro Forquesato http://www.pedroforquesato.com Sala 19C/FEA2 - pforquesato@usp.br" />
+    <meta name="author" content="Pedro Forquesato http://www.pedroforquesato.com Sala 217/FEA2 - pforquesato@usp.br" />
+    <script src="libs/header-attrs-2.13/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -12,7 +13,7 @@
 class: center, middle, inverse, title-slide
 
 # EAE-0310: ECONOMIA DO SETOR PÚBLICO
-### Pedro Forquesato<br/><a href="http://www.pedroforquesato.com" class="uri">http://www.pedroforquesato.com</a><br/>Sala 19C/FEA2 - <a href="mailto:pforquesato@usp.br" class="email">pforquesato@usp.br</a>
+### Pedro Forquesato<br/><a href="http://www.pedroforquesato.com" class="uri">http://www.pedroforquesato.com</a><br/>Sala 217/FEA2 - <a href="mailto:pforquesato@usp.br" class="email">pforquesato@usp.br</a>
 ### Faculdade de Economia, Administração e Contabilidade<br/>Universidade de São Paulo
 ### Aula 1: Análise normativa<br/>2022/1
 
@@ -538,6 +539,7 @@ University of Brasilia, 2016.
 &lt;!-- A elasticidade tem uma relação com a curvatura da função de demanda (no caso): quando a demanda é vertical, dizemos que é *perfeitamente inelástica*: `\(\varepsilon_D = 0\)` --&gt;
 
 &lt;!-- Quando a curva de demanda é horizontal, ela é *perfeitamente elástica*: `\(\varepsilon_D = \infty\)` --&gt;
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
