Add information on SUS hospitals to lecture 6

--- a/eae0310-6-seguridade-social.html
+++ b/eae0310-6-seguridade-social.html
@@ -3,7 +3,8 @@
   <head>
     <title>EAE-0310: ECONOMIA DO SETOR PÚBLICO</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Pedro Forquesato http://www.pedroforquesato.com Sala 19C/FEA2 - pforquesato@usp.br" />
+    <meta name="author" content="Pedro Forquesato http://www.pedroforquesato.com Sala 217/FEA2 - pforquesato@usp.br" />
+    <script src="libs/header-attrs-2.13/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -12,7 +13,7 @@
 class: center, middle, inverse, title-slide
 
 # EAE-0310: ECONOMIA DO SETOR PÚBLICO
-### Pedro Forquesato<br/><a href="http://www.pedroforquesato.com" class="uri">http://www.pedroforquesato.com</a><br/>Sala 19C/FEA2 - <a href="mailto:pforquesato@usp.br" class="email">pforquesato@usp.br</a>
+### Pedro Forquesato<br/><a href="http://www.pedroforquesato.com" class="uri">http://www.pedroforquesato.com</a><br/>Sala 217/FEA2 - <a href="mailto:pforquesato@usp.br" class="email">pforquesato@usp.br</a>
 ### Faculdade de Economia, Administração e Contabilidade<br/>Universidade de São Paulo
 ### Aula 6: Seguridade social<br/>2022/1
 
@@ -421,6 +422,13 @@ O governo pode intervir obrigando (e subsidiando) a compra de seguro de saúde (
 ---
 class: middle
 
+&lt;img src="figs/eae0310-6-15.png" width="100%" /&gt;
+
+Por volta de 20% dos hospitais que atendem o SUS são privados e 30% filantrópicos: apenas metade são públicos &amp;mdash; entre esses, são principalmente municipais entre os hospitais menores, e estaduais e federais entre os maiores (e que fazem atendimentos de maior complexidade) [BAG20]
+
+---
+class: middle
+
 &lt;img src="figs/eae0310-6-11.png" width="80%" /&gt;
 
 Seguro de saúde gera *risco moral* da sobre-provisão de bens médicos(*) [Gru16]
@@ -430,6 +438,10 @@ Seguro de saúde gera *risco moral* da sobre-provisão de bens médicos(*) [Gru1
 class:middle
 # Referências
 &lt;small&gt;
+[BAG20] L. d. A. Botega, M. V. Andrade, and G. R. Guedes. "Perfil dos
+hospitais gerais do Sistema Único de Saúde". In: _Revista de Saúde
+Pública_ 54 (2020).
+
 [CCN18] C. C. Carvalho, R. Corbi, and R. Narita. "Unintended
 consequences of unemployment insurance: Evidence from stricter
 eligibility criteria in Brazil". In: _Economics Letters_ 162 (2018),
@@ -446,7 +458,12 @@ Perspectives_ 25.1 (2011), pp. 115-38.
 [GG21] F. Gerard and G. Gonzaga. "Informal Labor and the Efficiency
 Cost of Social Programs: Evidence from Unemployment Insurance in
 Brazil". In: _American Economic Journal: Economic Policy_ (2021).
+&lt;/small&gt;
 
+---
+class:middle
+# Referências
+&lt;small&gt;
 [GN21] F. Gerard and J. Naritomi. "Job displacement insurance and (the
 lack of) consumption-smoothing". In: _American Economic Review_ 111.3
 (2021), pp. 899-942.
