Changes in class 5 and 6

--- a/eae0310-5-bens-publicos.html
+++ b/eae0310-5-bens-publicos.html
@@ -434,6 +434,13 @@ O julgamento da constitucionalidade das cotas pelo STF impulsionou a Lei das Cot
 ---
 class: middle
 
+&lt;img src="figs/eae0310-5-9.png" width="90%" /&gt;
+
+Proporção de alunos de escola pública (a) e PPI (b) em instituições federais de ensino superior &amp;mdash; o efeito da implementação da Lei das Cotas, entre 2012 e 2016, é evidente em eliminar a cauda inferior da distribuição [SM19]
+
+---
+class: middle
+
 &lt;img src="figs/eae0310-3-15.png" width="90%" /&gt;
 
 Em 2001, 3/4 dos graduandos eram brancos, enquanto apenas 1 em cada 5 era negro, proporção que dobrou em 14 anos, e hoje 43% dos universitários são negros (enquanto esse grupo representa 56% da população) &amp;mdash; mas é difícil precisar quanto dessa tendência se deve às cotas (TD2569/IPEA)
@@ -493,6 +500,10 @@ institutions for collective action_. Cambridge university press, 1990.
 
 [Rib16] A. C. T. Ribeiro. "Affirmative action outcomes: evidence from a
 Law School in Brazil". MA Thesis. Universidade de São Paulo, 2016.
+
+[SM19] A. S. Senkevics and U. M. Mello. "O perfil discente das
+universidades federais mudou pós-Lei de Cotas?" In: _Cadernos de
+Pesquisa_ 49.172 (2019), pp. 184-208.
 &lt;/small&gt;
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
